# calcprimelist-pl

./: CMakeLists.txt  README.md  README_ENG.md
.github/workflows/: cmake-multi-platform.yml  v3.yml
include/: base_sieve.h  bucket.h  cpu_info.h  marker.h  popcnt.h  prime_count.h  segmenter.h  wheel.h  writer.h
include/calcprime/: api.h
src/: api.cpp  base_sieve.cpp  bucket.cpp  cpu_info.cpp  main.cpp  marker.cpp  popcnt.cpp  prime_count.cpp  segmenter.cpp  wheel.cpp  writer.cpp
